--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@ body {
   /*font-size: 16px;*/
   font-size: 1em;
   line-height: 1.4;
-  padding: 1em;
 }
 
 img {
@@ -20,6 +19,11 @@ a, a:active, a:visited {
   text-decoration: none;
   color: #A63F4B;
   font-weight: bold;
+}
+
+.container {
+  width: 90%;
+  margin: 0 auto;
 }
 
 .profile--image {
