--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,9 @@
 body {
   margin: 0;
   padding: 0;
-  /*background-color: #efefef;*/
-  background-color: #f3f3f3;
+  background-color: #F3F3F3;
   color: #222;
   font-family: Georgia, ​ Helvetica, Helvetica Neue, Arial, sans-serif;
-  /*font-size: 16px;*/
   font-size: 100%;
   line-height: 1.5;
 }
@@ -36,18 +34,29 @@ a, a:active, a:visited {
   font-size: 200%;
 }
 
-.contact--links {
+footer {
+  border-top: 1px solid #E5E5E5;
+  color: #777;
+  font-size: 200%;
+  text-align: center;
+  margin-top: 2em;
+}
+
+footer > .contact--links {
   list-style: none;
   margin: 0;
   padding: 0;
-  text-align: center;
 }
 
-.contact--links > li {
-  font-size: 200%;
+footer > .contact--links > li {
   display: inline-block;
   padding-left: 0.1em;
   padding-right: 0.1em;
+}
+
+footer > .contact--owner {
+  font-size: 30%;
+  vertical-align: top;
 }
 
 @media (min-width: 400px) {
@@ -62,6 +71,18 @@ a, a:active, a:visited {
 
   .profile--image {
     width: 50%;
+  }
+
+  footer {
+    text-align: right;
+  }
+
+  footer > .contact--links {
+    float: left;
+  }
+
+  footer > .contact--owner {
+    vertical-align: super;
   }
 
 }
