Another try with footer font size...

--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ footer > .contact--links > li {
 }
 
 footer > .contact--owner {
-  font-size: 30%;
+  font-size: 0.3em;
   vertical-align: top;
 }
 
