Change body text color

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   background: #F3F3F3 url("../img/img-noise.png") repeat fixed 0 0;
-  color: #222;
+  color: #3F171D;
   font-family: Georgia, ​ Helvetica, Helvetica Neue, Arial, sans-serif;
   font-size: 100%;
   line-height: 1.5;
