--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,22 @@ img {
   text-align: center; /* ensure alt text of image is centered too */
 }
 
-a, a:active, a:visited {
+a,
+a:active,
+a:visited {
   text-decoration: none;
   color: #A63F4B;
   font-weight: bold;
+}
+
+a:hover,
+a.is-active {
+  opacity: .8;
+  /*color: #CF5A6A;*/
+}
+
+a.is-active {
+  text-decoration: underline;
 }
 
 .container {
@@ -50,6 +62,12 @@ header {
   border-bottom: 1px solid #E5E5E5;
   margin-top: 1em;
   padding-bottom: 2em;
+}
+
+nav {
+  margin-top: 1em;
+  text-align: right;
+  font-size: 80%;
 }
 
 footer {
@@ -125,6 +143,10 @@ footer > .contact--owner {
 
   .container {
     width: 45%;
+  }
+
+  nav {
+    font-size: 50%;
   }
 
 }
