--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   background: #F3F3F3 url("../img/img-noise.png") repeat fixed 0 0;
   color: #3F171D;
-  font-family: Georgia, ​ Helvetica, Helvetica Neue, Arial, sans-serif;
+  font-family: "Georgia", "Helvetica", "Helvetica Neue", "Arial", sans-serif;
   font-size: 100%;
   line-height: 1.5;
 }
