--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,10 @@ a.is-active {
   margin: 0 auto;
 }
 
+.pictures img {
+  width: 100%;
+}
+
 .pictures a,
 .pictures a:active,
 .pictures a:visited {
@@ -109,6 +113,12 @@ footer > .contact--owner {
     /*width: 85%;*/
   }
 
+}
+
+@media (min-width: 480px) {
+  .pictures img {
+    width: auto;
+  }
 }
 
 @media (min-width: 600px) {
