--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,17 @@ a.is-active {
 
 .logo {
   font-size: 200%; /* alt text should be big enough */
-  width: 100%;
+  display: inline-block;
+  vertical-align: top;
+}
+
+.logo--left {
+  width: 65%;
+}
+
+.logo--right {
+  width: 25%;
+  float: right;
 }
 
 .pictures {
@@ -64,7 +74,7 @@ a.is-active {
 
 header {
   border-bottom: 1px solid #E5E5E5;
-  margin-top: 1em;
+  margin-top: 2em;
   padding-bottom: 2em;
 }
 
