--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -34,14 +34,8 @@ body {
   }
 
   header {
+    margin-bottom: 2em;
     margin-top: 2em;
-    padding-bottom: 2em;
-  }
-
-  nav {
-    font-size: 80%;
-    margin-top: 1em;
-    text-align: right;
   }
 
 }
@@ -95,10 +89,6 @@ body {
 
     .container {
       width: 45%;
-    }
-
-    nav {
-      font-size: 50%;
     }
   }
 
