--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -37,6 +37,15 @@ body {
     margin-top: 2em;
   }
 
+  footer {
+    color: #777;
+    font-size: 60%;
+    margin-top: 4em;
+    padding-bottom: 1em;
+    padding-top: 1em;
+    text-align: center;
+  }
+
 }
 
 /* And now some extensions for bigger devices, mobile first for the win! */
