--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,7 +6,10 @@ $xl-device: 1200px;
 
 $text-color: #222;
 $heading-color: #111;
+$footer-color: #777;
 $link-color: #A63F4B;
+
+$bg: #FAFAFA;
 
 @import "base";
 @import "link";
