--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,7 +1,5 @@
 body {
-  $_bg: #F9F9F9;
-
-  background: $_bg;
+  background: $bg;
   color: $text-color;
   font-family: "Georgia", "Helvetica", "Helvetica Neue", "Arial", sans-serif;
   font-size: 100%;
@@ -38,7 +36,7 @@ body {
   }
 
   footer {
-    color: #777;
+    color: $footer-color;
     font-size: 60%;
     margin-top: 4em;
     padding-bottom: 1em;
