--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -7,14 +7,9 @@ body {
   margin: 0;
   padding: 0;
 
-  h2 {
+  h1, h2, h3, h4, h5 {
     color: $heading-color;
     margin-top: 1.5em;
-  }
-
-  p {
-    text-align: justify;
-    vertical-align: top;
   }
 
   img {
