--- a/scss/_logo.scss
+++ b/scss/_logo.scss
@@ -1,15 +1,13 @@
 .logo {
-  display: inline-block;
   font-size: 200%; /* alt text should be big enough */
   vertical-align: top;
 
-  &.logo--left {
-    width: 65%;
+  &.logo--lettering {
+    width: 40%;
   }
 
-  &.logo--right {
+  &.logo--profile {
     border-radius: 50%;
-    float: right;
     width: 25%;
   }
 }
