--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,7 +15,7 @@ $heading-color: #111;
 $footer-color: #777;
 $link-color: #A63F4B;
 
-$bg: #FAFAFA;
+$bg: #FCFCFC;
 
 @import "base";
 @import "link";
