Add front matter comment to style.scss

--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,6 @@
+---
+---
+
 $roboto-font-path: "lib/roboto-fontface/fonts";
 @import "lib/roboto-fontface/css/roboto/sass/roboto-fontface-light";
 @import "lib/roboto-fontface/css/roboto/sass/roboto-fontface-medium";
