Another try to fix sass processing

--- a/style.scss
+++ b/style.scss
@@ -1,9 +1,9 @@
 ---
 ---
 
-$roboto-font-path: "lib/roboto-fontface/fonts";
-@import "lib/roboto-fontface/css/roboto/sass/roboto-fontface-light";
-@import "lib/roboto-fontface/css/roboto/sass/roboto-fontface-medium";
+$roboto-font-path: "roboto-fontface/fonts";
+@import "roboto-fontface/css/roboto/sass/roboto-fontface-light";
+@import "roboto-fontface/css/roboto/sass/roboto-fontface-medium";
 $font-family-regular: "Roboto-Light";
 $font-family-emphasized: "Roboto-Medium";
 
