--- a/style.scss
+++ b/style.scss
@@ -1,11 +1,7 @@
 ---
 ---
 
-$roboto-font-path: "/lib/roboto-fontface/fonts";
-@import "/lib/roboto-fontface/css/roboto/sass/roboto-fontface-light";
-@import "/lib/roboto-fontface/css/roboto/sass/roboto-fontface-medium";
-$font-family-regular: "Roboto-Light";
-$font-family-emphasized: "Roboto-Medium";
+@import "fonts";
 
 $xs-device: 400px;
 $sm-device: 480px;
