Move stylesheet to css directory

--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -6,4 +6,4 @@
       href="lib/normalize.css/normalize.css"/>
 <link rel="stylesheet" type="text/css"
       href="lib/fontawesome/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="style.css"/>
+<link rel="stylesheet" type="text/css" href="css/style.css"/>
