Update stylesheet URLs

--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -3,7 +3,7 @@
       content="width=device-width, initial-scale=1.0, user-scalable=no">
 <title>{{ site.title }}</title>
 <link rel="stylesheet" type="text/css"
-      href="lib/normalize.css/normalize.css"/>
+      href="/lib/normalize.css/normalize.css"/>
 <link rel="stylesheet" type="text/css"
-      href="lib/fontawesome/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="css/style.css"/>
+      href="/lib/fontawesome/css/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" href="/css/style.css"/>
