--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -2,6 +2,7 @@
 <html lang="de">
 <head>
   {% include meta.html %}
+  <link rel="stylesheet" type="text/css" href="/css/blog.css"/>
 </head>
 <body>
 
