--- a/_includes/logo.html
+++ b/_includes/logo.html
@@ -1,3 +1,3 @@
-<img alt="" src="img/logo/profile_small.JPG" class="logo logo--profile"/>
-<img alt="frau lyoner" src="img/logo/logo.png"
+<img alt="" src="/img/logo/profile_small.JPG" class="logo logo--profile"/>
+<img alt="frau lyoner" src="/img/logo/logo.png"
      class="logo logo--lettering"/>
