Adjust blog post styling

--- a/css/blog.scss
+++ b/css/blog.scss
@@ -1,6 +1,14 @@
 ---
 ---
 
-.posts {
-  font-size: 80%;
+body {
+
+  header {
+    text-align: left;
+  }
+
+  .posts {
+    font-size: 80%;
+  }
+
 }
