--- a/_sass/_logo.scss
+++ b/_sass/_logo.scss
@@ -3,7 +3,8 @@
   vertical-align: top;
 
   &.logo--lettering {
-    width: 40%;
+    margin-top: 0.5em;
+    width: 50%;
   }
 
   &.logo--profile {
