Update header for blog layout

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -8,7 +8,9 @@
 
 <div class="container">
   <header>
-    <h3>fraulyoner bloggt</h3>
+    <img alt="frau lyoner" src="/img/logo/logo-new.png"
+         class="logo logo--lettering"/>
+    <p>bloggt</p>
   </header>
 
   {{content}}
