--- a/css/blog.scss
+++ b/css/blog.scss
@@ -5,6 +5,22 @@ body {
 
   header {
     text-align: left;
+
+    img {
+      margin-left: 0;
+      margin-right: 0;
+    }
+
+    .logo.logo--lettering {
+      display: inline-block;
+      margin-top: 0;
+    }
+
+    p {
+      display: inline-block;
+      margin-left: 0.5em;
+    }
+
   }
 
   .posts {
