Adjust size of h1 to h6

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -7,7 +7,14 @@ body {
   margin: 0;
   padding: 0;
 
-  h1, h2, h3, h4, h5 {
+  h1 { font-size: 1.25em; }
+  h2 { font-size: 1.1em; }
+  h3 { font-size: 1em; }
+  h4 { font-size: 0.8em; }
+  h5 { font-size: 0.75em; }
+  h6 { font-size: 0.5em; }
+
+  h1, h2, h3, h4, h5, h6 {
     color: $heading-color;
     font-family: $font-family-emphasized;
     font-weight: normal;
