--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
-<html lang="de">
+<html>
 <head>
   {% include meta.html %}
-  <link rel="stylesheet" type="text/css" href="/css/blog.css"/>
 </head>
 <body>
 
 <div class="container">
-  <header>
-    {% include logo.html %}
-    <p>bloggt</p>
-  </header>
 
   {{content}}
 
