--- a/_layouts/en.html
+++ b/_layouts/en.html
@@ -1,23 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  {% include meta.html %}
-</head>
-<body>
+---
+layout: default
+---
 
-<div class="container">
-  <header>
-    <div>
-      <h1>Welcome / <a href="index_de.html">Willkommen</a></h1>
-      <p>Hi, I'm frau lyoner.<br/>I make ideas come alive.</p>
-    </div>
-    {% include logo.html %}
-  </header>
+<header>
+  <h1>Welcome / <a href="index_de.html">Willkommen</a></h1>
+  <p>Hi, I'm frau lyoner.<br/>I make ideas come alive.</p>
+  {% include avatar.html %}
+  {% include logo.html %}
+</header>
 
-  {{content}}
+{{content}}
 
-  {% include footer.html %}
-</div>
-
-</body>
-</html>
