--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -38,6 +38,10 @@ body {
     margin-bottom: 2em;
     margin-top: 2em;
     text-align: center;
+
+    .logo-container > p {
+      margin: 0;
+    }
   }
 
   footer {
@@ -56,7 +60,7 @@ body {
 @media (min-width: $xs-device) {
 
   body {
-    font-size: 120%;
+    font-size: 110%;
 
     .container {
       /*width: 85%;*/
@@ -72,7 +76,7 @@ body {
 @media (min-width: $md-device) {
 
   body {
-    font-size: 130%;
+    font-size: 120%;
 
     .container {
       /*width: 80%;*/
@@ -84,7 +88,7 @@ body {
 @media (min-width: $lg-device) {
 
   body {
-    font-size: 140%;
+    font-size: 130%;
 
     .container {
       width: 60%;
@@ -96,7 +100,7 @@ body {
 @media (min-width: $xl-device) {
 
   body {
-    font-size: 150%;
+    font-size: 140%;
 
     .container {
       width: 45%;
