--- a/_sass/_logo.scss
+++ b/_sass/_logo.scss
@@ -3,12 +3,13 @@
   vertical-align: top;
 
   &.logo--lettering {
-    margin-top: 0.5em;
     width: 50%;
   }
 
   &.logo--profile {
     border-radius: 50%;
     width: 25%;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
   }
 }
