Add styling for blog posts, make logo sizes responsible

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -8,9 +8,12 @@
 
 <div class="container">
   <header>
+    <p>Hi, ich bin</p>
     {% include logo.html %}
-    <p>bloggt</p>
+    <p class="right">und ich entrümple die Kammer des Schreckens</p>
   </header>
+
+  <hr>
 
   {{content}}
 
