--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -53,6 +53,25 @@ body {
     text-align: center;
   }
 
+  hr {
+    border: 0;
+    height: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  }
+
+  .right {
+    text-align: right;
+  }
+
+  .left {
+    text-align: left;
+  }
+
+  .center {
+    text-align: center;
+  }
+
 }
 
 /* And now some extensions for bigger devices, mobile first for the win! */
@@ -60,7 +79,7 @@ body {
 @media (min-width: $xs-device) {
 
   body {
-    font-size: 110%;
+    font-size: 100%;
 
     .container {
       /*width: 85%;*/
@@ -76,7 +95,7 @@ body {
 @media (min-width: $md-device) {
 
   body {
-    font-size: 120%;
+    font-size: 110%;
 
     .container {
       /*width: 80%;*/
@@ -88,7 +107,7 @@ body {
 @media (min-width: $lg-device) {
 
   body {
-    font-size: 130%;
+    font-size: 120%;
 
     .container {
       width: 60%;
@@ -100,7 +119,7 @@ body {
 @media (min-width: $xl-device) {
 
   body {
-    font-size: 140%;
+    font-size: 130%;
 
     .container {
       width: 45%;
