--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,12 +4,9 @@ layout: blog
 
 <article class="post">
   <h3>{{ page.title }}</h3>
+  <p class="date">{{ page.date | date: "%B %e, %Y" }}</p>
 
   <div class="entry">
     {{ content }}
   </div>
-
-  <small class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
-  </small>
 </article>
