--- a/css/blog.scss
+++ b/css/blog.scss
@@ -1,10 +1,14 @@
 ---
 ---
 
+@import "variables";
+
 body {
 
   header {
     text-align: left;
+    margin-top: 1em;
+    margin-bottom: 1em;
 
     img {
       margin-left: 0;
@@ -12,19 +16,34 @@ body {
     }
 
     .logo.logo--lettering {
-      display: inline-block;
       margin-top: 0;
     }
 
     p {
-      display: inline-block;
-      margin-left: 0.5em;
+      font-size: 90%;
+      margin: 0;
     }
 
   }
 
   .posts {
     font-size: 80%;
+  }
+
+  .post {
+    h3 {
+      margin-bottom: 0;
+    }
+
+    .date {
+      margin: 0;
+      font-size: 75%;
+      color: $text-decent-color;
+    }
+
+    .more {
+      font-size: 75%;
+    }
   }
 
 }
