--- a/css/style.scss
+++ b/css/style.scss
@@ -2,20 +2,7 @@
 ---
 
 @import "fonts";
-
-$xs-device: 400px;
-$sm-device: 480px;
-$md-device: 600px;
-$lg-device: 800px;
-$xl-device: 1200px;
-
-$text-color: #222;
-$heading-color: #111;
-$footer-color: #777;
-$link-color: #A63F4B;
-
-$bg: #FCFCFC;
-
+@import "variables";
 @import "base";
 @import "link";
 @import "logo";
