--- a/css/blog.scss
+++ b/css/blog.scss
@@ -26,11 +26,20 @@ body {
 
   }
 
+  .logo.logo--profile {
+    float: left;
+    margin: 0.5em 0.5em 0 0.5em;
+    width: 15%;
+  }
+
   .posts {
     font-size: 80%;
   }
 
   .post {
+    margin-top: 2em;
+    margin-bottom: 2em;
+
     h3 {
       margin-bottom: 0;
     }
