Change font family for emphasized texts

--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -1,5 +1,5 @@
 $roboto-font-path: "../lib/roboto-fontface/fonts";
 @import "../lib/roboto-fontface/css/roboto/sass/roboto-fontface-light";
-@import "../lib/roboto-fontface/css/roboto/sass/roboto-fontface-medium";
+@import "../lib/roboto-fontface/css/roboto/sass/roboto-fontface-regular";
 $font-family-regular: "Roboto-Light";
-$font-family-emphasized: "Roboto-Medium";
+$font-family-emphasized: "Roboto-Regular";
