Remove link of blog post header

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: blog
 ---
 
 <article class="post">
-  <h3><a href="{{ page.url }}">{{ page.title }}</a></h3>
+  <h2>{{ page.title }}</h2>
   <p class="date">{{ page.date | date: "%d.%m.%Y" }} von fraulyoner</p>
 
   <div class="entry">
