Adjust typographical sizes

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -15,14 +15,15 @@
 
   <hr>
 
-  {% include avatar.html %}
-
-  <p>
-    Die <a href="/">Frau Lyoner</a> möchte jetzt bloggen.
-    Warum und so? Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-    diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-    sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
-  </p>
+  <div class="intro">
+    {% include avatar.html %}
+    <p>
+      Die <a href="/">Frau Lyoner</a> möchte jetzt bloggen.
+      Warum und so? Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+      diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+      sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+    </p>
+  </div>
 
   <hr>
 
