--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -77,15 +77,7 @@ body {
 /* And now some extensions for bigger devices, mobile first for the win! */
 
 @media (min-width: $xs-device) {
-
-  body {
-    font-size: 100%;
-
-    .container {
-      /*width: 85%;*/
-    }
-  }
-
+  /* OK */
 }
 
 @media (min-width: $sm-device) {
@@ -93,21 +85,13 @@ body {
 }
 
 @media (min-width: $md-device) {
-
-  body {
-    font-size: 110%;
-
-    .container {
-      /*width: 80%;*/
-    }
-  }
-
+  /* OK */
 }
 
 @media (min-width: $lg-device) {
 
   body {
-    font-size: 120%;
+    font-size: 110%;
 
     .container {
       width: 60%;
@@ -119,7 +103,7 @@ body {
 @media (min-width: $xl-device) {
 
   body {
-    font-size: 130%;
+    font-size: 120%;
 
     .container {
       width: 45%;
