--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -7,3 +7,4 @@
 <link rel="stylesheet" type="text/css"
       href="/lib/fontawesome/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="/css/style.css"/>
+{% include analytics.html %}
