--- a/_includes/logo.html
+++ b/_includes/logo.html
@@ -1,2 +1,1 @@
-<img alt="frau lyoner" src="/img/logo/logo-new.png"
-     class="logo logo--lettering"/>
+<img alt="frau lyoner" src="/img/logo.png" class="logo"/>
