--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,1 @@
-<footer>&copy; fraulyoner - Aljona Buchloh 2018</footer>
+<footer>&copy; fraulyoner - Aljona Buchloh 2018 - <a href="impressum.html">Impressum</a></footer>
