--- a/_sass/_logo.scss
+++ b/_sass/_logo.scss
@@ -1,14 +1,9 @@
 .logo {
   font-size: 200%; /* alt text should be big enough */
   vertical-align: top;
-  width: 100%;
+}
 
-  @media (min-width: $sm-device) {
-    width: 60%;
-  }
-
-  @media (min-width: $md-device) {
-    width: 50%;
-  }
-
+.profile {
+  margin-left: 0;
+  margin-top: 2em;
 }
