Replace big language switcher by a more decent one

--- a/_layouts/de.html
+++ b/_layouts/de.html
@@ -3,7 +3,9 @@ layout: default
 ---
 
 <header>
-  <h1>Willkommen / <a href="index.html">Welcome</a></h1>
+  <small class="language">
+    <a href="index_de.html" class="is-active">DE</a> | <a href="index.html">EN</a>
+  </small>
   {% include logo.html %}
 </header>
 
