--- a/_layouts/en.html
+++ b/_layouts/en.html
@@ -3,9 +3,10 @@ layout: default
 ---
 
 <header>
-  <h1>Welcome / <a href="index_de.html">Willkommen</a></h1>
+  <small class="language">
+    <a href="index_de.html">DE</a> | <a href="index.html" class="is-active">EN</a>
+  </small>
   {% include logo.html %}
 </header>
 
 {{content}}
-
