--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -35,12 +35,15 @@ body {
   }
 
   header {
-    margin-bottom: 2em;
-    margin-top: 2em;
+    margin-bottom: 3em;
+    margin-top: 3em;
     text-align: center;
 
-    .logo-container > p {
-      margin: 0;
+    .language {
+      margin-right: 1em;
+      position: absolute;
+      right: 0;
+      top: 0;
     }
   }
 
