--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -9,5 +9,6 @@ $text-decent-color: #777;
 $heading-color: #111;
 $footer-color: #777;
 $link-color: #A63F4B;
+$link-hover-color: lighten($link-color, 5%);
 
-$bg: #FCFCFC;
+$bg: #FFFFFF;
