Remove obsolete images

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
     <small class="language">
       <a href="index_de.html">DE</a> | <a href="index.html">EN</a>
     </small>
-    <img alt="frau lyoner" src="/img/logo/profile_small.JPG" class="logo"/>
+    <img alt="frau lyoner" src="/img/profile.jpg" class="logo"/>
   </header>
 
   {{content}}
