--- a/css/style.scss
+++ b/css/style.scss
@@ -4,6 +4,8 @@
 @import "fonts";
 @import "variables";
 @import "base";
+@import "header";
+@import "footer";
 @import "link";
 @import "logo";
 @import "button";
