Adjust styling of language switcher

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -4,7 +4,9 @@ header {
   text-align: center;
 
   .language {
-    margin-right: 1em;
+    padding: 0;
+    padding-right: 1em;
+    padding-top: 1em;
     position: absolute;
     right: 0;
     top: 0;
