Set German as default language
index_de.html -> index.html
index.html -> index_en.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 
   <header>
     <small class="language">
-      <a href="index_de.html">DE</a> | <a href="index.html">EN</a>
+      <a href="index.html">DE</a> | <a href="index_en.html">EN</a>
     </small>
     <img alt="frau lyoner" src="/img/profile.jpg" class="logo"/>
   </header>
