--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0, user-scalable=no">
+  {% if page.noindex %}
+  <meta name="robots" content="noindex,follow,noarchive" />
+	{% endif %}
   <title>{{ site.title }}</title>
   <link rel="stylesheet" type="text/css"
         href="/lib/normalize.css/normalize.css"/>
