Add domain verification for Pinterest

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0, user-scalable=no">
+  <meta name="p:domain_verify" content="b7793eb67d6d570b4d06eb35082069ee"/>
   {% if page.noindex %}
   <meta name="robots" content="noindex,follow,noarchive" />
 	{% endif %}
