Add link to logo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 <div class="container">
 
   <header>
-    <img alt="frau lyoner" src="/img/profile.jpg" class="logo"/>
+    <a href="index.html"><img alt="frau lyoner" src="/img/profile.jpg" class="logo"/></a>
   </header>
 
   {{content}}
