--- a/_sass/_creative.scss
+++ b/_sass/_creative.scss
@@ -1,4 +1,5 @@
-.homeofficeabisz {
+.homeofficeabisz,
+.lettering {
   a:hover {
     text-decoration: none;
   }
@@ -16,6 +17,9 @@
   body {
     .homeofficeabisz img {
       width: 40%;
+    }
+    .lettering img {
+      width: 49%;
     }
   }
 }
