Fix broken impressum and datenschutz links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,8 +9,8 @@
   <p class="text">
     &copy; {{ site.data.person.name }} 2020 &ndash;
     <a href="mailto:{{ site.data.social.email_address }}">Kontakt</a>
-  	| <a href="{{ site.baseurl }}/impressum.html">Impressum</a>
-  	| <a href="{{ site.baseurl }}/datenschutz.html">Datenschutz</a>
+    | <a href="{{ site.baseurl }}/impressum/">Impressum</a>
+    | <a href="{{ site.baseurl }}/datenschutz/">Datenschutz</a>
   	<br/>
     Powered by <a href="https://jekyllrb.com/">Jekyll</a> with
     <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a>
