Add short description to blog index page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,6 +8,7 @@ layout: default
 
     <header id="main">
       <h1 class="title">Handlettering & Sketchnotes</h1>
+      <p>Hier blogge ich über meine Creative Journey.</p>
     </header>
 
   </article>
