Update blog subtitle

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@ layout: default
 
     <header id="main">
       <h1 class="title">Handlettering & Sketchnotes</h1>
-      <p>Hier blogge ich über meine Creative Journey.</p>
+      <p>Hier blogge ich über meine Kreativprojekte.</p>
     </header>
 
   </article>
