Update blog title and description

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,8 +7,8 @@ layout: default
   <article>
 
     <header id="main">
-      <h1 class="title">Handlettering & Sketchnotes</h1>
-      <p>Hier blogge ich über meine Kreativprojekte.</p>
+      <h1 class="title">Inspiration und Tipps zu Handlettering & Sketchnotes</h1>
+      <p>Anregungen, Tipps und Tricks für deine Kreativprojekte</p>
     </header>
 
   </article>
